objects/LeaveRequest__c.object
<CustomObject>
    <description>Create A leave Request</description>
    <label>LeaveRequest</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeaveRequest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LeaveRequest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>To Date</description>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>From Date</description>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Comment__c</fullName>
        <description>Manager Comment</description>
        <label>Manager Comment</label>
        <type>TextArea</type>
    </fields>
</CustomObject>